# Fluid-Solver

./: .gitignore  Cargo.toml  README.md  makefile  plotter  testing
benches/: linear_solvers.rs  solver.rs
examples/: scenario1.rs  scenario2.rs  scenario3.rs  scenario4.rs  scenario5.rs  scenario6.rs  scenario7.rs  scenario8.rs
src/: advection.rs  field.rs  fluid_solver.rs  integrator_test.rs  integrators.rs  interpolation.rs  kernels.cl  lib.rs  linear_solver.c  linear_solver.cl  linear_solvers.rs  main.rs  opencl_kernel.rs  visualiser.rs
