[package]
name = "Fluids"
version = "0.1.0"
authors = ["hargados <hargados@tcd.ie>"]

[dependencies]
glium = "0.13.5"
crossbeam = "0.2.5"
scoped_threadpool = "0.1.7"

[dependencies.opencl]
path = "/Users/Seanlth/Projects/Rust/rust-opencl"


[dependencies.lodepng]
path = "/Users/Seanlth/Projects/Rust/lodepng-rust"


[profile.dev]
debug = true   # Controls whether the compiler passes `-g`

[profile.bench]
opt-level = 3
